v3/README.md
# 校园作文辅导系统 v3 📝

v3 是完整校园版：支持多角色登录、班级管理、作文布置、看图作文、历史版本对比、成长档案和 SQLite 本地数据库。

## 🎯 系统价值与功能点

### 💡 教育价值
- **激发写作兴趣**：AI智能点评，鼓励性反馈，提升学生写作自信
- **个性化辅导**：根据不同年级、作文类型提供针对性指导
- **减轻教师负担**：自动化评分和点评，节省批改时间
- **促进家校合作**：家长可查看学生写作成长轨迹
- **培养写作能力**：从选题、写作到修改的全流程指导

### ✨ 核心功能

#### 学生端功能
- 📝 **作文创作**：支持多种作文类型（写人、写事、写景、想象作文等）
- 🔍 **智能点评**：AI自动分析作文，给出五维评分和改进建议
- 🖼️ **看图作文**：上传图片，生成观察提示和写作指导
- 📚 **范文对比**：与优秀范文对比，学习写作技巧
- 🔄 **分步改写**：提供四步改写指导，循序渐进提升写作水平
- 📈 **成长档案**：记录写作成长轨迹，展示进步趋势

#### 教师端功能
- 📋 **布置作业**：批量布置作文题目，设置截止日期
- 👥 **班级管理**：创建和管理班级，分配学生
- 📊 **批量查看**：查看所有学生提交的作文和评分
- 🎯 **针对性指导**：根据学生情况提供个性化建议

#### 技术特色
- 🤖 **AI驱动**：基于先进语言模型的智能辅导
- 💾 **数据持久化**：自动保存学生作文和成长记录
- 📱 **界面友好**：简洁直观的操作界面，适合小学生使用
- 🔒 **账号系统**：支持教师、学生、家长多角色登录
- 📄 **PDF导出**：一键导出作文评语单

## 🚀 部署方式（通用于所有版本）

### 🌐 在线访问
系统已部署在Streamlit云平台，可直接访问：
[https://campus-essay-system.streamlit.app/](https://campus-essay-system.streamlit.app/)

### 📋 环境准备
1. 安装Python 3.8或更高版本
2. 确保网络连接正常（用于接入AI模型）

### 🛠️ 快速部署步骤

#### 第一步：安装依赖
打开命令提示符（CMD）或终端，进入对应版本文件夹，运行：
```bash
pip install -r requirements.txt
```

#### 第二步：启动应用
在同一文件夹中运行：
```bash
streamlit run 文件名.py
```
- v3版本：`streamlit run campus_essay_system.py`

#### 第三步：访问应用
启动后，浏览器会自动打开应用页面，或手动访问：`http://localhost:8501`

### 🌐 从 GitHub 部署到 Streamlit Community Cloud

1. 将代码推送到 GitHub 仓库。
2. 确认仓库根目录或 `v3/` 目录包含：
   - `campus_essay_system.py`（v3 入口文件）
   - `requirements.txt`（Python 依赖）
   - `packages.txt`（Linux apt 依赖，例如中文字体）
3. 不要提交 `.streamlit/secrets.toml` 或 `.env`。在 Streamlit Community Cloud 的 Advanced settings 中配置：
   - `OPENAI_API_KEY`
   - `OPENAI_BASE_URL`（如使用兼容代理端点）
   - `OPENAI_MODEL`
   - `SUPABASE_URL`、`SUPABASE_KEY`（如启用云端数据库）
4. 打开 [Streamlit Community Cloud](https://share.streamlit.io)，点击 Create app。
5. 选择 GitHub 仓库、分支，并将 main file path 设置为 `v3/campus_essay_system.py`。
6. 如需固定 Python 版本，在 Advanced settings 中选择；保存 secrets 后部署。
7. 部署完成后验证登录、作文点评、看图作文提示、作业布置和成长档案页面。

参考官方文档：
- [Deploy your app](https://docs.streamlit.io/deploy/streamlit-community-cloud/deploy-your-app/deploy)
- [File organization](https://docs.streamlit.io/deploy/streamlit-community-cloud/deploy-your-app/file-organization)
- [App dependencies](https://docs.streamlit.io/deploy/streamlit-community-cloud/deploy-your-app/app-dependencies)
- [Secrets management](https://docs.streamlit.io/deploy/streamlit-community-cloud/deploy-your-app/secrets-management)

## 📈 版本演化过程

### 🔄 功能点对比表

| 功能点 | v1版本 | v2版本 | v3版本 |
|--------|--------|--------|--------|
| 基础作文点评 | ✅ | ✅ | ✅ |
| 年级分级评分 | ❌ | ✅ | ✅ |
| 作文模板库 | ❌ | ✅ | ✅ |
| 范文对比 | ❌ | ✅ | ✅ |
| 分步改写指导 | ❌ | ✅ | ✅ |
| 数据持久化 | ❌ | ✅ | ✅ |
| 成长档案 | ❌ | ✅ | ✅ |
| 看图作文 | ❌ | ✅ | ✅ |
| 题目生成 | ❌ | ✅ | ✅ |
| 账号系统 | ❌ | ❌ | ✅ |
| 班级管理 | ❌ | ❌ | ✅ |
| 作业布置 | ❌ | ❌ | ✅ |
| 多角色权限 | ❌ | ❌ | ✅ |
| 数据库存储 | ❌ | ❌ | ✅ |
| Streamlit secrets 配置 | ❌ | ❌ | ✅ |
| 安全测试 | ❌ | ❌ | ✅ |
| 性能测试 | ❌ | ❌ | ✅ |

### 📊 量化统计表

| 指标 | v1版本 | v2版本 | v3版本 |
|------|--------|--------|--------|
| 核心功能数 | 6 | 12 | 18 |
| 代码行数 | 320 | 710 | 1033 |
| 依赖包数目 | 2 | 3 | 9 |
| 功能测试用例数 | 38 | 49 | 64 |
| 测试代码行数 | 899 | 1322 | 1742 |
| 需求匹配度 | 60% | 80% | 95% |

### 📖 版本演进说明

#### v1版本：基础版
- **定位**：最小可行产品，实现核心作文点评功能
- **特点**：简单易用，适合单个学生使用
- **应用场景**：家庭辅导、个人写作练习

#### v2版本：校园版
- **定位**：增强版，增加校园场景功能
- **特点**：支持班级使用，增加模板库、范文对比等功能
- **应用场景**：班级教学、作文课堂

#### v3版本：完整版
- **定位**：完整校园作文辅导系统
- **特点**：多角色支持，班级管理，数据持久化
- **应用场景**：学校整体部署，年级统一使用

## 🎓 使用建议

### 小学教师
1. **课堂教学**：使用v3版本，创建班级，布置作文作业
2. **个性化辅导**：利用AI点评功能，重点关注学生的改进空间
3. **家校沟通**：分享学生成长档案，让家长了解学习进展

### 学生
1. **日常练习**：使用系统进行写作练习，获取即时反馈
2. **范文学习**：通过范文对比功能，学习优秀写作技巧
3. **逐步提升**：按照分步改写指导，不断改进作文

### 家长
1. **监督指导**：查看孩子的写作情况和成长轨迹
2. **配合教学**：根据系统建议，帮助孩子进行修改
3. **鼓励支持**：关注孩子的进步，给予积极鼓励

## 📞 技术支持

如有问题或需要帮助，请联系系统管理员。

---

**注意**：本系统旨在辅助作文教学，最终的教学效果还需要教师的专业指导和学生的持续练习。
